--- a/services/index.html
+++ b/services/index.html
@@ -36,6 +36,9 @@
       box-sizing: border-box;
     }
 
+
+
+    
     :root {
       --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       --secondary-gradient: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
@@ -938,98 +941,98 @@
       <div class="service-gallery">
         <div class="service-gallery-track" id="serviceTrack">
           <div class="service-slide">
-            <img src="assets/img/simg/SD.jpg" alt="Custom Software Development" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/SD.jpg" alt="Custom Software Development" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Custom Software Development</div>
               <div class="service-subcaption">Tailored solutions built to match your exact business needs</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/EBI.jpg" alt="E-commerce Solutions" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/EBI.jpg" alt="E-commerce Solutions" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">E-commerce Solutions</div>
               <div class="service-subcaption">Complete online stores with secure payments and inventory management</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/MAD.jpg" alt="Mobile App Development" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/MAD.jpg" alt="Mobile App Development" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Mobile App Development</div>
               <div class="service-subcaption">Native and cross-platform apps that users love</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/SEO.jpg" alt="SEO & Digital Marketing" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/SEO.jpg" alt="SEO & Digital Marketing" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">SEO & Digital Marketing</div>
               <div class="service-subcaption">Drive traffic and boost your online presence</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/DBS.jpg" alt="Business Tools" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/DBS.jpg" alt="Business Tools" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Business Tools & Analytics</div>
               <div class="service-subcaption">Smart dashboards and automation for better decisions</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/BSM.jpg" alt="Communication Solutions" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/BSM.jpg" alt="Communication Solutions" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Communication Solutions</div>
               <div class="service-subcaption">Bulk SMS, email campaigns, and notification systems</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/gaming.jpg" alt="Gaming App and Software" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/gaming.jpg" alt="Gaming App and Software" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Gaming App & Software</div>
               <div class="service-subcaption">High-performance gaming apps with smooth controls and engaging gameplay</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/vegetable.jpg" alt="Vegetable Shop Solutions" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/vegetable.jpg" alt="Vegetable Shop Solutions" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Vegetable Shop</div>
               <div class="service-subcaption">Smart billing and delivery systems for fresh produce businesses</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/restaurant.jpg" alt="Restaurant Management" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/restaurant.jpg" alt="Restaurant Management" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Restaurant / Food Shop</div>
               <div class="service-subcaption">Complete POS and delivery management for food businesses</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/salon1.jpg" alt="Salon Management" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/salon1.jpg" alt="Salon Management" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Salon / Barber Shop</div>
               <div class="service-subcaption">Appointment scheduling, billing, and customer management</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/wine.jpg" alt="Wine Shop Management" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/wine.jpg" alt="Wine Shop Management" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Wine Shop</div>
               <div class="service-subcaption">Inventory tracking, billing, and age verification systems</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/carservice.jpg" alt="Service Center Management" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/carservice.jpg" alt="Service Center Management" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Car / Bike Service Center</div>
               <div class="service-subcaption">Job tracking, inventory management, and customer billing</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/electronics.jpg" alt="Electronics Shop Management" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/electronics.jpg" alt="Electronics Shop Management" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">Electronics Shop</div>
               <div class="service-subcaption">Billing, warranty tracking, and inventory automation</div>
             </div>
           </div>
           <div class="service-slide">
-            <img src="assets/img/simg/generalstore.jpg" alt="General Store Management" loading="lazy">
+            <img src="https://astechit.in/assets/img/simg/generalstore.jpg" alt="General Store Management" loading="lazy">
             <div class="service-overlay">
               <div class="service-caption">General Store / Supermarket</div>
               <div class="service-subcaption">Complete POS, billing, and inventory management solutions</div>
