--- a/services/index.html
+++ b/services/index.html
@@ -225,6 +225,7 @@
     /* Page Header */
     .page-header {
       text-align: center;
+        margin-top: 30px;
       margin-bottom: 60px;
       animation: fadeInUp 1s ease-out;
     }
