--- a/services/index.html
+++ b/services/index.html
@@ -671,7 +671,7 @@
       padding: 14px 18px;
       border-radius: 12px;
       border: 1px solid var(--border-color);
-      background: var(--glass-bg);
+      background: var(--glass-bg)
       color: var(--text-primary);
       font-size: 15px;
       font-family: inherit;
@@ -688,6 +688,12 @@
       box-shadow: 0 0 0 3px rgba(79, 172, 254, 0.1);
       transform: translateY(-1px);
     }
+
+    .form-input::placeholder,
+    .form-textarea::placeholder {
+      color: var(--text-secondary);
+    }
+
 
     .form-textarea {
       min-height: 120px;
