--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1307,7 +1307,7 @@
             <li>24/7 Email Support</li>
             <li>SSL Certificate Included</li>
           </ul>
-          <a href="/#contact" class="plan-btn plan-btn-secondary">Get Started</a>
+          <a href="/contact" class="plan-btn plan-btn-secondary">Get Started</a>
         </div>
 
         <!-- Standard Website -->
@@ -1329,7 +1329,7 @@
             <li>Live Chat Integration</li>
             <li>Priority Phone Support</li>
           </ul>
-          <a href="/#contact" class="plan-btn plan-btn-primary">Get Started</a>
+          <a href="/contact" class="plan-btn plan-btn-primary">Get Started</a>
         </div>
 
         <!-- E-commerce -->
@@ -1351,7 +1351,7 @@
             <li>Shipping Integration</li>
             <li>Sales Analytics & Reports</li>
           </ul>
-          <a href="/#contact" class="plan-btn plan-btn-secondary">Get Started</a>
+          <a href="/contact" class="plan-btn plan-btn-secondary">Get Started</a>
         </div>
 
         <!-- Mobile App -->
@@ -1373,7 +1373,7 @@
             <li>Admin Panel Included</li>
             <li>3 Months Free Maintenance</li>
           </ul>
-          <a href="/#contact" class="plan-btn plan-btn-secondary">Get Started</a>
+          <a href="/contact" class="plan-btn plan-btn-secondary">Get Started</a>
         </div>
 
         <!-- Billing Software -->
@@ -1395,7 +1395,7 @@
             <li>Data Backup & Recovery</li>
             <li>Printer Integration</li>
           </ul>
-          <a href="/#contact" class="plan-btn plan-btn-secondary">Get Started</a>
+          <a href="/contact" class="plan-btn plan-btn-secondary">Get Started</a>
         </div>
 
         <!-- Custom Software -->
@@ -1415,7 +1415,7 @@
             <li>6 Months Free Support</li>
             <li>Source Code Delivery</li>
           </ul>
-          <a href="/#contact" class="plan-btn plan-btn-secondary">Get Quote</a>
+          <a href="/contact" class="plan-btn plan-btn-secondary">Get Quote</a>
         </div>
       </div>
     </section>
