--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- SEO -->
-  <title>AS TECH IT SOLUTION | Software & Website Development in India</title>
-  <meta name="description" content="AS TECH IT SOLUTION builds modern websites and custom software. We design, develop, and maintain fast, secure, and scalable digital products in India.">
-  <meta name="keywords" content="AS TECH IT SOLUTION, software development, website design, IT services India, custom software, web apps, astechit.in">
+  <title>AS TECH IT SOLUTIONS | Software & Website Development in India</title>
+  <meta name="description" content="AS TECH IT SOLUTIONS builds modern websites and custom software. We design, develop, and maintain fast, secure, and scalable digital products in India.">
+  <meta name="keywords" content="AS TECH IT SOLUTIONS, software development, website design, IT services India, custom software, web apps, astechit.in">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://astechit.in/">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="AS TECH IT SOLUTION — Software & Website Development">
+  <meta property="og:title" content="AS TECH IT SOLUTIONS — Software & Website Development">
   <meta property="og:description" content="Websites • Web Apps • Custom Software • IT Services">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://astechit.in/">
@@ -20,8 +20,8 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="AS TECH IT SOLUTION">
-  <meta name="twitter:description" content="We build software, websites, and IT solutions to help your business grow.">
+  <meta name="twitter:title" content="AS TECH IT SOLUTIONS">
+  <meta name="twitter:description" content="We build software, websites, and IT SOLUTIONSs to help your business grow.">
   <meta name="twitter:image" content="https://astechit.in/assets/img/mylogo.png">
 
   <!-- Schema -->
@@ -29,7 +29,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "AS TECH IT SOLUTION",
+    "name": "AS TECH IT SOLUTIONS",
     "url": "https://astechit.in",
     "logo": "https://astechit.in/assets/img/mylogo.png",
     "foundingDate": "2023",
@@ -906,8 +906,8 @@
     <div class="container">
       <div class="header-content">
         <a class="brand" href="#home">
-          <img src="assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
-          <span>AS TECH IT SOLUTION</span>
+          <img src="assets/img/mylogo.png" alt="AS TECH IT SOLUTIONS logo">
+          <span>AS TECH IT SOLUTIONS</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
@@ -928,7 +928,7 @@
       <div class="container">
         <div class="hero-content">
           <h1>We Build <span class="accent">Software</span> & <span class="accent">Websites</span> That Help You Grow</h1>
-          <p>From concept to launch, AS TECH IT SOLUTION delivers cutting-edge design, reliable engineering, and ongoing support to transform your digital presence.</p>
+          <p>From concept to launch, AS TECH IT SOLUTIONS delivers cutting-edge design, reliable engineering, and ongoing support to transform your digital presence.</p>
           <div class="cta-buttons">
             <a class="btn btn-primary" href="/contact">
               <span>🚀</span>
@@ -972,7 +972,7 @@
         <div class="service-slide">
           <img src="assets/img/simg/EBI.jpg" alt="E-commerce Website">
           <div class="service-overlay">
-            <div class="service-caption">E-commerce Solutions</div>
+            <div class="service-caption">E-commerce SOLUTIONSs</div>
           </div>
         </div>
         <div class="service-slide">
@@ -996,7 +996,7 @@
         <div class="service-slide">
           <img src="assets/img/simg/BSM.jpg" alt="Bulk SMS">
           <div class="service-overlay">
-            <div class="service-caption">Communication Solutions</div>
+            <div class="service-caption">Communication SOLUTIONSs</div>
           </div>
         </div> 
 <!-- 🎮 Gaming App & Software -->
@@ -1004,7 +1004,7 @@
   <img src="assets/img/simg/gaming.jpg" alt="Gaming App and Software">
   <div class="service-overlay">
     <div class="service-caption">🎮 Gaming App & Software</div>
-    <div class="service-subcaption">Designing high-performance gaming apps and smart software solutions that deliver fun, speed, and smooth control.</div>
+    <div class="service-subcaption">Designing high-performance gaming apps and smart software SOLUTIONSs that deliver fun, speed, and smooth control.</div>
   </div>
 </div>
 
@@ -1023,7 +1023,7 @@
   <img src="assets/img/simg/restaurant.jpg" alt="Restaurant or Food Shop">
   <div class="service-overlay">
     <div class="service-caption">🍽️ Restaurant / Food Shop</div>
-    <div class="service-subcaption">From orders to bills — manage your restaurant effortlessly with our smart POS & delivery solutions.</div>
+    <div class="service-subcaption">From orders to bills — manage your restaurant effortlessly with our smart POS & delivery SOLUTIONSs.</div>
   </div>
 </div>
 
@@ -1088,11 +1088,11 @@
         <div class="service-card">
           <div class="service-icon">⚙️</div>
           <h3>Custom Software</h3>
-          <p>Tailored business solutions, intelligent dashboards, and workflow automation. Scalable architecture with robust APIs and secure databases.</p>
+          <p>Tailored business SOLUTIONSs, intelligent dashboards, and workflow automation. Scalable architecture with robust APIs and secure databases.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">🛒</div>
-          <h3>E-Commerce Solutions</h3>
+          <h3>E-Commerce SOLUTIONSs</h3>
           <p>Complete online stores with secure payment processing, advanced inventory management, and comprehensive order tracking systems.</p>
         </div>
         <div class="service-card">
@@ -1828,32 +1828,32 @@
           <div class="footer-section social-media">
             <h3>Connect With Us</h3>
             <div class="social-links">
-              <a href="https://facebook.com/astechitsolution" class="social-link facebook" target="_blank" rel="noopener" title="Follow us on Facebook">
+              <a href="https://facebook.com/astechitSOLUTIONS" class="social-link facebook" target="_blank" rel="noopener" title="Follow us on Facebook">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
                 </svg>
               </a>
-              <a href="https://instagram.com/astechitsolution" class="social-link instagram" target="_blank" rel="noopener" title="Follow us on Instagram">
+              <a href="https://instagram.com/astechitSOLUTIONS" class="social-link instagram" target="_blank" rel="noopener" title="Follow us on Instagram">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                 </svg>
               </a>
-              <a href="https://linkedin.com/company/astechitsolution" class="social-link linkedin" target="_blank" rel="noopener" title="Connect on LinkedIn">
+              <a href="https://linkedin.com/company/astechitSOLUTIONS" class="social-link linkedin" target="_blank" rel="noopener" title="Connect on LinkedIn">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                 </svg>
               </a>
-              <a href="https://twitter.com/astechitsolution" class="social-link twitter" target="_blank" rel="noopener" title="Follow us on Twitter">
+              <a href="https://twitter.com/astechitSOLUTIONS" class="social-link twitter" target="_blank" rel="noopener" title="Follow us on Twitter">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
                 </svg>
               </a>
-              <a href="https://youtube.com/@astechitsolution" class="social-link youtube" target="_blank" rel="noopener" title="Subscribe on YouTube">
+              <a href="https://youtube.com/@astechitSOLUTIONS" class="social-link youtube" target="_blank" rel="noopener" title="Subscribe on YouTube">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
                 </svg>
               </a>
-              <a href="https://github.com/astechitsolution" class="social-link github" target="_blank" rel="noopener" title="Follow us on GitHub">
+              <a href="https://github.com/astechitSOLUTIONS" class="social-link github" target="_blank" rel="noopener" title="Follow us on GitHub">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
                 </svg>
@@ -1896,7 +1896,7 @@
 
         <!-- Footer Bottom -->
         <div class="footer-bottom">
-          <p>© <span id="year"></span> AS TECH IT SOLUTION. Crafted with ❤️ in India. All rights reserved.</p>
+          <p>© <span id="year"></span> AS TECH IT SOLUTIONS. Crafted with ❤️ in India. All rights reserved.</p>
          
         </div>
       </div>
