--- a/services/index.html
+++ b/services/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- SEO -->
-  <title>Services — AS TECH IT SOLUTION | Professional Web & Software Development</title>
-  <meta name="description" content="Complete digital solutions by AS TECH IT SOLUTION: Web development, custom software, eCommerce, mobile apps, UI/UX design, SEO, and maintenance services.">
-  <meta name="keywords" content="web development, custom software, ecommerce, mobile apps, UI/UX design, SEO services, digital marketing, maintenance, AS TECH IT SOLUTION">
+  <title>Services — AS TECH IT SOLUTIONS | Professional Web & Software Development</title>
+  <meta name="description" content="Complete digital solutions by AS TECH IT SOLUTIONS: Web development, custom software, eCommerce, mobile apps, UI/UX design, SEO, and maintenance services.">
+  <meta name="keywords" content="web development, custom software, ecommerce, mobile apps, UI/UX design, SEO services, digital marketing, maintenance, AS TECH IT SOLUTIONS">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://astechit.in/services">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Services — AS TECH IT SOLUTION">
+  <meta property="og:title" content="Services — AS TECH IT SOLUTIONS">
   <meta property="og:description" content="Professional web development, custom software, and digital solutions">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://astechit.in/services">
@@ -920,8 +920,8 @@
     <div class="container">
       <div class="header-content">
         <a class="brand" href="/">
-          <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
-          <span>AS TECH IT SOLUTION</span>
+          <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTIONS logo">
+          <span>AS TECH IT SOLUTIONS</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
@@ -1281,7 +1281,7 @@
         </div>
 
         <div class="footer-bottom">
-          <p>© <span id="year"></span> AS TECH IT SOLUTION. Crafted with ❤️ in India. All rights reserved.</p>
+          <p>© <span id="year"></span> AS TECH IT SOLUTIONS. Crafted with ❤️ in India. All rights reserved.</p>
         </div>
       </div>
     </div>
