--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="AS TECH IT SOLUTIONS">
-  <meta name="twitter:description" content="We build software, websites, and IT SOLUTIONSs to help your business grow.">
+  <meta name="twitter:description" content="We build software, websites, and IT solutions to help your business grow.">
   <meta name="twitter:image" content="https://astechit.in/assets/img/mylogo.png">
 
   <!-- Schema -->
@@ -972,7 +972,7 @@
         <div class="service-slide">
           <img src="assets/img/simg/EBI.jpg" alt="E-commerce Website">
           <div class="service-overlay">
-            <div class="service-caption">E-commerce SOLUTIONSs</div>
+            <div class="service-caption">E-commerce solutions</div>
           </div>
         </div>
         <div class="service-slide">
@@ -996,7 +996,7 @@
         <div class="service-slide">
           <img src="assets/img/simg/BSM.jpg" alt="Bulk SMS">
           <div class="service-overlay">
-            <div class="service-caption">Communication SOLUTIONSs</div>
+            <div class="service-caption">Communication solutions</div>
           </div>
         </div> 
 <!-- 🎮 Gaming App & Software -->
@@ -1004,7 +1004,7 @@
   <img src="assets/img/simg/gaming.jpg" alt="Gaming App and Software">
   <div class="service-overlay">
     <div class="service-caption">🎮 Gaming App & Software</div>
-    <div class="service-subcaption">Designing high-performance gaming apps and smart software SOLUTIONSs that deliver fun, speed, and smooth control.</div>
+    <div class="service-subcaption">Designing high-performance gaming apps and smart software solutions that deliver fun, speed, and smooth control.</div>
   </div>
 </div>
 
@@ -1023,7 +1023,7 @@
   <img src="assets/img/simg/restaurant.jpg" alt="Restaurant or Food Shop">
   <div class="service-overlay">
     <div class="service-caption">🍽️ Restaurant / Food Shop</div>
-    <div class="service-subcaption">From orders to bills — manage your restaurant effortlessly with our smart POS & delivery SOLUTIONSs.</div>
+    <div class="service-subcaption">From orders to bills — manage your restaurant effortlessly with our smart POS & delivery solutions.</div>
   </div>
 </div>
 
@@ -1088,11 +1088,11 @@
         <div class="service-card">
           <div class="service-icon">⚙️</div>
           <h3>Custom Software</h3>
-          <p>Tailored business SOLUTIONSs, intelligent dashboards, and workflow automation. Scalable architecture with robust APIs and secure databases.</p>
+          <p>Tailored business solutions, intelligent dashboards, and workflow automation. Scalable architecture with robust APIs and secure databases.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">🛒</div>
-          <h3>E-Commerce SOLUTIONSs</h3>
+          <h3>E-Commerce solutions</h3>
           <p>Complete online stores with secure payment processing, advanced inventory management, and comprehensive order tracking systems.</p>
         </div>
         <div class="service-card">
