--- a/pricing/index.html
+++ b/pricing/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- SEO -->
-  <title>Pricing Plans — AS TECH IT SOLUTION | Transparent Software & Website Development Costs</title>
+  <title>Pricing Plans — AS TECH IT SOLUTIONS | Transparent Software & Website Development Costs</title>
   <meta name="description" content="Transparent pricing for websites, apps, custom software & business solutions. From ₹15,000 basic websites to enterprise solutions. Get your free quote today.">
-  <meta name="keywords" content="website pricing India, app development cost, custom software pricing, business solutions cost, AS TECH IT SOLUTION pricing">
+  <meta name="keywords" content="website pricing India, app development cost, custom software pricing, business solutions cost, AS TECH IT SOLUTIONS pricing">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://astechit.in/pricing">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Pricing Plans — AS TECH IT SOLUTION">
+  <meta property="og:title" content="Pricing Plans — AS TECH IT SOLUTIONS">
   <meta property="og:description" content="Transparent pricing for professional websites, mobile apps, and custom software solutions">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://astechit.in/pricing">
@@ -1240,8 +1240,8 @@
     <div class="container">
       <div class="header-content">
         <a class="brand" href="/">
-          <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
-          <span>AS TECH IT SOLUTION</span>
+          <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTIONS logo">
+          <span>AS TECH IT SOLUTIONS</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
@@ -1565,7 +1565,7 @@
 
         <!-- Footer Bottom -->
         <div class="footer-bottom">
-          <p>© <span id="year"></span> AS TECH IT SOLUTION. Crafted with ❤️ in India. All rights reserved.</p>
+          <p>© <span id="year"></span> AS TECH IT SOLUTIONS. Crafted with ❤️ in India. All rights reserved.</p>
          
         </div>
       </div>
