--- a/contact/index.html
+++ b/contact/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- SEO -->
-  <title>Contact Us — AS TECH IT SOLUTION | Get In Touch for Custom Solutions</title>
-  <meta name="description" content="Get in touch with AS TECH IT SOLUTION for custom website, app development, and software solutions. Located in Ulwe, Navi Mumbai. Free consultation available.">
-  <meta name="keywords" content="contact AS TECH IT SOLUTION, website development Mumbai, app development contact, custom software consultation, Ulwe Navi Mumbai">
+  <title>Contact Us — AS TECH IT SOLUTIONS | Get In Touch for Custom Solutions</title>
+  <meta name="description" content="Get in touch with AS TECH IT SOLUTIONS for custom website, app development, and software solutions. Located in Ulwe, Navi Mumbai. Free consultation available.">
+  <meta name="keywords" content="contact AS TECH IT SOLUTIONS, website development Mumbai, app development contact, custom software consultation, Ulwe Navi Mumbai">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://astechit.in/contact">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Contact Us — AS TECH IT SOLUTION">
+  <meta property="og:title" content="Contact Us — AS TECH IT SOLUTIONS">
   <meta property="og:description" content="Connect with our expert team for professional web development, mobile apps, and custom software solutions">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://astechit.in/contact">
@@ -1045,8 +1045,8 @@
     <div class="container">
       <div class="header-content">
         <a class="brand" href="/">
-          <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
-          <span>AS TECH IT SOLUTION</span>
+          <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTIONS logo">
+          <span>AS TECH IT SOLUTIONS</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
@@ -1197,7 +1197,7 @@
                   allowfullscreen="" 
                   loading="lazy" 
                   referrerpolicy="no-referrer-when-downgrade"
-                  title="AS TECH IT SOLUTION Office Location - Ulwe, Navi Mumbai">
+                  title="AS TECH IT SOLUTIONS Office Location - Ulwe, Navi Mumbai">
                 </iframe>
               </div>
             </div>
@@ -1266,7 +1266,7 @@
 
         <!-- Footer Bottom -->
         <div class="footer-bottom">
-          <p>© <span id="year"></span> AS TECH IT SOLUTION. Crafted with ❤️ in India. All rights reserved.</p>
+          <p>© <span id="year"></span> AS TECH IT SOLUTIONS. Crafted with ❤️ in India. All rights reserved.</p>
         </div>
       </div>
     </div>
