--- a/contact/index.html
+++ b/contact/index.html
@@ -36,6 +36,20 @@
     }
 
 
+/* replace or add after existing .brand img rule */
+.brand img {
+  width: 48px;
+  height: 48px;
+  border-radius: 12px;
+  transition: all 0.3s ease;
+  background: var(--accent-gradient);
+  padding: 4px;               /* <- makes the colored frame visible */
+}
+
+/* keep hover glow (optional) */
+.brand:hover img {
+  box-shadow: var(--shadow-glow);
+}
 
 
     
